LPS-34012 Fixing broken styles (Users Admin)

--- a/portal-web/docroot/html/portlet/users_admin/css/main.css
+++ b/portal-web/docroot/html/portlet/users_admin/css/main.css
@@ -39,6 +39,10 @@
 				width: 200px;
 			}
 		}
+
+		.user-table, .delete-organizations {
+			margin-bottom: 15px;
+		}
 	}
 
 	#header-bottom {
@@ -207,7 +211,7 @@
 	.view-all-link {
 		color: #666;
 		font-weight: normal;
-		margin-left: 0.5em;
+		margin-bottom: 15px;
 	}
 
 	.lfr-asset-column-details {
